[project]
name = "alphasuite"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.13.0",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "lib-pybroker>=1.2.11",
    "lightgbm>=4.6.0",
    "markdown-pdf>=1.10",
    "matplotlib>=3.10.8",
    "mplfinance>=0.12.10b0",
    "numpy<2.3",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.2.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "ta-lib>=0.6.8",
    "textblob>=0.19.0",
    "vadersentiment>=3.3.2",
    "yfinance>=0.2.58",
]
